--- a/villa-istria/package.json
+++ b/villa-istria/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.12.0",
     "react-ga": "^3.1.2",
     "react-icons": "^4.3.1",
+    "react-lazyload": "^3.2.0",
     "react-mailchimp-subscribe": "^2.1.0",
     "react-player": "1.7.0",
     "react-progressbar.js": "^0.2.0",
