--- a/villa-istria/package.json
+++ b/villa-istria/package.json
@@ -17,10 +17,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "cross-env": "^7.0.2",
+    "emailjs": "^4.0.0",
     "express": "^4.17.1",
     "google-map-react": "^2.0.8",
+    "net": "^1.0.2",
     "next": "^11.1.2",
     "next-images": "^1.4.0",
     "next-redux-wrapper": "^4.0.1",
@@ -49,6 +52,7 @@
     "sass": "^1.26.9",
     "src": "^1.1.2",
     "swiper": "^7.4.1",
+    "tls": "^0.0.1",
     "typescript": "^3.9.5"
   },
   "eslintConfig": {
