--- a/villa-istria/package.json
+++ b/villa-istria/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^7.0.2",
     "emailjs": "^4.0.0",
     "express": "^4.17.1",
+    "firebase": "^9.8.2",
     "google-map-react": "^2.0.8",
     "net": "^1.0.2",
     "next": "^11.1.2",
