--- a/villa-istria/package.json
+++ b/villa-istria/package.json
@@ -75,6 +75,7 @@
     ]
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.1.9"
+    "@types/bootstrap": "^5.1.9",
+    "@types/react": "^16.0.1"
   }
 }
