--- a/villa-istria/package.json
+++ b/villa-istria/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^16.12.0",
     "react-ga": "^3.1.2",
     "react-icons": "^4.3.1",
+    "react-lazy-load-image-component": "^1.5.4",
     "react-lazyload": "^3.2.0",
     "react-mailchimp-subscribe": "^2.1.0",
     "react-player": "1.7.0",
