--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -19,14 +19,16 @@ jobs:
       - name: Create env file
         run: |
           touch villa-istria/.env
-          echo NEXT_PUBLIC_INFO_EMAIL=${{secrets.NEXT_PUBLIC_INFO_EMAIL}} >> packages/web/.env
-          echo NEXT_PUBLIC_INFO_TEL=${{secrets.NEXT_PUBLIC_INFO_TEL}} >> packages/web/.env
-          echo NEXT_PUBLIC_LOCATION=${{secrets.NEXT_PUBLIC_LOCATION}} >> packages/web/.env
-          echo NEXT_PUBLIC_EMAILJS_SERVICE_ID=${{secrets.NEXT_PUBLIC_EMAILJS_SERVICE_ID}} >> packages/web/.env
-          echo NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=${{secrets.NEXT_PUBLIC_EMAILJS_TEMPLATE_ID}} >> packages/web/.env
-          echo NEXT_PUBLIC_EMAILJS_USER_ID=${{secrets.NEXT_PUBLIC_EMAILJS_USER_ID}} >> packages/web/.env
-          echo NEXT_PUBLIC_EMAILJS_TOKEN=${{secrets.NEXT_PUBLIC_EMAILJS_TOKEN}} >> packages/web/.env
-          echo NEXT_PUBLIC_EMAILJS_URL=${{secrets.NEXT_PUBLIC_EMAILJS_URL}} >> packages/web/.env
+          echo NEXT_PUBLIC_INFO_EMAIL=${{secrets.NEXT_PUBLIC_INFO_EMAIL}} >> villa-istria/.env
+          echo NEXT_PUBLIC_INFO_TEL=${{secrets.NEXT_PUBLIC_INFO_TEL}} >> villa-istria/.env
+          echo NEXT_PUBLIC_LOCATION=${{secrets.NEXT_PUBLIC_LOCATION}} >> villa-istria/.env
+          echo NEXT_PUBLIC_EMAILJS_SERVICE_ID=${{secrets.NEXT_PUBLIC_EMAILJS_SERVICE_ID}} >> villa-istria/.env
+          echo NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=${{secrets.NEXT_PUBLIC_EMAILJS_TEMPLATE_ID}} >> villa-istria/.env
+          echo NEXT_PUBLIC_EMAILJS_USER_ID=${{secrets.NEXT_PUBLIC_EMAILJS_USER_ID}} >> villa-istria/.env
+          echo NEXT_PUBLIC_EMAILJS_TOKEN=${{secrets.NEXT_PUBLIC_EMAILJS_TOKEN}} >> villa-istria/.env
+          echo NEXT_PUBLIC_EMAILJS_URL=${{secrets.NEXT_PUBLIC_EMAILJS_URL}} >> villa-istria/.env
+          echo NEXT_FACEBOOK_URL=${{secrets.NEXT_FACEBOOK_URL}} >> villa-istria/.env
+          echo NEXT_INSTAGRAM_URL=${{secrets.NEXT_INSTAGRAM_URL}} >> villa-istria/.env
 
       - name: Build
         run: yarn build
