--- a/villa-istria/package.json
+++ b/villa-istria/package.json
@@ -26,9 +26,7 @@
     "google-map-react": "^2.0.8",
     "net": "^1.0.2",
     "next": "12",
-    "next-images": "^1.4.0",
     "next-optimized-images": "^2.6.2",
-    "next-redux-wrapper": "^4.0.1",
     "node-sass": "^4.14.1",
     "package.json": "^2.0.1",
     "public": "^0.1.5",
@@ -38,6 +36,7 @@
     "react-burger-menu": "^2.7.1",
     "react-countup": "^4.3.3",
     "react-customizable-progressbar": "^1.0.1",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^16.12.0",
     "react-ga": "^3.1.2",
     "react-icons": "^4.3.1",
@@ -46,12 +45,9 @@
     "react-mailchimp-subscribe": "^2.1.0",
     "react-player": "1.7.0",
     "react-progressbar.js": "^0.2.0",
-    "react-redux": "^7.1.3",
     "react-responsive-modal": "3.5.1",
     "react-tabs": "^3.2.3",
     "react-visibility-sensor": "^5.1.1",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.3.0",
     "sass": "^1.26.9",
     "src": "^1.1.2",
     "swiper": "^7.4.1",
