--- a/villa-istria/package.json
+++ b/villa-istria/package.json
@@ -39,6 +39,7 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "^16.12.0",
     "react-ga": "^3.1.2",
+    "react-gtm-module": "^2.0.11",
     "react-icons": "^4.3.1",
     "react-lazy-load-image-component": "^1.5.4",
     "react-lazyload": "^3.2.0",
