--- a/.github/workflows/deploy_production.yml
+++ b/.github/workflows/deploy_production.yml
@@ -31,6 +31,7 @@ jobs:
           echo NEXT_PUBLIC_INSTAGRAM_URL=${{secrets.NEXT_PUBLIC_INSTAGRAM_URL}} >> villa-istria/.env
           echo NEXT_PUBLIC_EUROTOURS_URL=${{secrets.NEXT_PUBLIC_EUROTOURS_URL}} >> villa-istria/.env
           echo NEXT_PUBLIC_GOOGLE_ANALYTICS=${{secrets.NEXT_PUBLIC_GOOGLE_ANALYTICS}} >> villa-istria/.env
+          echo NEXT_PUBLIC_GOOGLE_TAG_MANAGER=${{secrets.NEXT_PUBLIC_GOOGLE_TAG_MANAGER}} >> villa-istria/.env
 
       - name: Build
         run: yarn build
