--- a/villa-istria/package.json
+++ b/villa-istria/package.json
@@ -33,6 +33,7 @@
     "react-accessible-accordion": "^3.3.3",
     "react-bootstrap": "^2.1.1",
     "react-burger-menu": "^2.7.1",
+    "react-calendar": "^3.9.0",
     "react-countup": "^4.3.3",
     "react-customizable-progressbar": "^1.0.1",
     "react-device-detect": "^2.2.2",
