--- a/villa-istria/package.json
+++ b/villa-istria/package.json
@@ -32,7 +32,7 @@
     "react": "^17.0.2",
     "react-accessible-accordion": "^3.3.3",
     "react-bootstrap": "^2.1.1",
-    "react-burger-menu": "^2.7.1",
+    "react-burger-menu": "3.0.8",
     "react-countup": "^4.3.3",
     "react-customizable-progressbar": "^1.0.1",
     "react-device-detect": "^2.2.2",
