--- a/villa-istria/package.json
+++ b/villa-istria/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "cross-env": "^7.0.2",
+    "dayjs": "^1.11.6",
     "emailjs": "^4.0.1",
     "express": "^4.17.1",
     "firebase": "^9.8.2",
@@ -33,8 +34,8 @@
     "react-accessible-accordion": "^3.3.3",
     "react-bootstrap": "^2.1.1",
     "react-burger-menu": "3.0.8",
-    "react-countup": "^4.3.3",
     "react-calendar": "^3.9.0",
+    "react-countup": "^4.3.3",
     "react-customizable-progressbar": "^1.0.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
