--- a/.github/workflows/deploy_production.yml
+++ b/.github/workflows/deploy_production.yml
@@ -1,52 +1,52 @@
-name: Deploy to Production
-on:
-  push:
-    branches:
-      - production
-jobs:
-  deploy-to-production:
-    name: Deploy to Production
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2.1.0
-      - uses: actions/setup-node@v2
-        with:
-          node-version: "14"
-      - name: Install dependencies
-        run: yarn install
-        working-directory: villa-istria/
+# name: Deploy to Production
+# on:
+#   push:
+#     branches:
+#       - production
+# jobs:
+#   deploy-to-production:
+#     name: Deploy to Production
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2.1.0
+#       - uses: actions/setup-node@v2
+#         with:
+#           node-version: "14"
+#       - name: Install dependencies
+#         run: yarn install
+#         working-directory: villa-istria/
 
-      - name: Create env file
-        run: |
-          touch villa-istria/.env
-          echo NEXT_PUBLIC_INFO_EMAIL=${{secrets.NEXT_PUBLIC_INFO_EMAIL}} >> villa-istria/.env
-          echo NEXT_PUBLIC_INFO_TEL=${{secrets.NEXT_PUBLIC_INFO_TEL}} >> villa-istria/.env
-          echo NEXT_PUBLIC_LOCATION=${{secrets.NEXT_PUBLIC_LOCATION}} >> villa-istria/.env
-          echo NEXT_PUBLIC_EMAILJS_SERVICE_ID=${{secrets.NEXT_PUBLIC_EMAILJS_SERVICE_ID}} >> villa-istria/.env
-          echo NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=${{secrets.NEXT_PUBLIC_EMAILJS_TEMPLATE_ID}} >> villa-istria/.env
-          echo NEXT_PUBLIC_EMAILJS_USER_ID=${{secrets.NEXT_PUBLIC_EMAILJS_USER_ID}} >> villa-istria/.env
-          echo NEXT_PUBLIC_EMAILJS_TOKEN=${{secrets.NEXT_PUBLIC_EMAILJS_TOKEN}} >> villa-istria/.env
-          echo NEXT_PUBLIC_EMAILJS_URL=${{secrets.NEXT_PUBLIC_EMAILJS_URL}} >> villa-istria/.env
-          echo NEXT_PUBLIC_FACEBOOK_URL=${{secrets.NEXT_PUBLIC_FACEBOOK_URL}} >> villa-istria/.env
-          echo NEXT_PUBLIC_INSTAGRAM_URL=${{secrets.NEXT_PUBLIC_INSTAGRAM_URL}} >> villa-istria/.env
-          echo NEXT_PUBLIC_AIRBNB_URL=${{secrets.NEXT_PUBLIC_AIRBNB_URL}} >> villa-istria/.env
-          echo NEXT_PUBLIC_BOOKING_URL=${{secrets.NEXT_PUBLIC_BOOKING_URL}} >> villa-istria/.env
-          echo NEXT_PUBLIC_GOOGLE_ANALYTICS=${{secrets.NEXT_PUBLIC_GOOGLE_ANALYTICS}} >> villa-istria/.env
-          echo NEXT_PUBLIC_GOOGLE_TAG_MANAGER=${{secrets.NEXT_PUBLIC_GOOGLE_TAG_MANAGER}} >> villa-istria/.env
+#       - name: Create env file
+#         run: |
+#           touch villa-istria/.env
+#           echo NEXT_PUBLIC_INFO_EMAIL=${{secrets.NEXT_PUBLIC_INFO_EMAIL}} >> villa-istria/.env
+#           echo NEXT_PUBLIC_INFO_TEL=${{secrets.NEXT_PUBLIC_INFO_TEL}} >> villa-istria/.env
+#           echo NEXT_PUBLIC_LOCATION=${{secrets.NEXT_PUBLIC_LOCATION}} >> villa-istria/.env
+#           echo NEXT_PUBLIC_EMAILJS_SERVICE_ID=${{secrets.NEXT_PUBLIC_EMAILJS_SERVICE_ID}} >> villa-istria/.env
+#           echo NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=${{secrets.NEXT_PUBLIC_EMAILJS_TEMPLATE_ID}} >> villa-istria/.env
+#           echo NEXT_PUBLIC_EMAILJS_USER_ID=${{secrets.NEXT_PUBLIC_EMAILJS_USER_ID}} >> villa-istria/.env
+#           echo NEXT_PUBLIC_EMAILJS_TOKEN=${{secrets.NEXT_PUBLIC_EMAILJS_TOKEN}} >> villa-istria/.env
+#           echo NEXT_PUBLIC_EMAILJS_URL=${{secrets.NEXT_PUBLIC_EMAILJS_URL}} >> villa-istria/.env
+#           echo NEXT_PUBLIC_FACEBOOK_URL=${{secrets.NEXT_PUBLIC_FACEBOOK_URL}} >> villa-istria/.env
+#           echo NEXT_PUBLIC_INSTAGRAM_URL=${{secrets.NEXT_PUBLIC_INSTAGRAM_URL}} >> villa-istria/.env
+#           echo NEXT_PUBLIC_AIRBNB_URL=${{secrets.NEXT_PUBLIC_AIRBNB_URL}} >> villa-istria/.env
+#           echo NEXT_PUBLIC_BOOKING_URL=${{secrets.NEXT_PUBLIC_BOOKING_URL}} >> villa-istria/.env
+#           echo NEXT_PUBLIC_GOOGLE_ANALYTICS=${{secrets.NEXT_PUBLIC_GOOGLE_ANALYTICS}} >> villa-istria/.env
+#           echo NEXT_PUBLIC_GOOGLE_TAG_MANAGER=${{secrets.NEXT_PUBLIC_GOOGLE_TAG_MANAGER}} >> villa-istria/.env
 
-      - name: Build
-        run: yarn build
-        working-directory: villa-istria/
+#       - name: Build
+#         run: yarn build
+#         working-directory: villa-istria/
 
-      - name: Export
-        run: yarn export
-        working-directory: villa-istria/
+#       - name: Export
+#         run: yarn export
+#         working-directory: villa-istria/
 
-      - name: Deploy
-        uses: SamKirkland/FTP-Deploy-Action@4.3.0
-        with:
-          local-dir: villa-istria/out/
-          server-dir: public_html/
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
+#       - name: Deploy
+#         uses: SamKirkland/FTP-Deploy-Action@4.3.0
+#         with:
+#           local-dir: villa-istria/out/
+#           server-dir: public_html/
+#           server: ${{ secrets.FTP_SERVER }}
+#           username: ${{ secrets.FTP_USERNAME }}
+#           password: ${{ secrets.FTP_PASSWORD }}
